--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body>
     <div id="main">
-        <video muted src="./assets/videos/hero-video.mp4"></video>
-        <!-- <video autoplay muted loop src="./assets/videos/hero-video.mp4"></video> -->
+        <!-- <video muted src="./assets/videos/hero-video.mp4"></video> -->
+        <video autoplay muted loop src="./assets/videos/hero-video.mp4"></video>
 
         <!-- Nabvar Starts -->
 
